--- a/static/css/alliedrentacar.css
+++ b/static/css/alliedrentacar.css
@@ -95,3 +95,27 @@ form .password_input.focus {
     color: white;
 }
 
+.c-btn{
+    background-color: rgb(250,250,250);
+}
+
+.bg_white{
+    background-color: white;
+}
+
+.btn-sm {
+    font-size: 14px;
+    border-radius: 3px;
+    padding: 0.4rem;
+}
+
+.marginRight-1{
+    margin-right: 1rem;
+}
+.marginRight-2{
+    margin-right: 2rem;
+}
+.marginRight-3{
+    margin-right: 3rem;
+}
+
