--- a/templates/registration/password_reset_base.html
+++ b/templates/registration/password_reset_base.html
@@ -54,7 +54,9 @@
     <script src="{% static 'js/angular-messages.min.js' %}"></script>
     <script src="{% static 'node_modules/angular-material/angular-material.min.js' %}"></script>
     <script src="{% static 'js/controller/alliedrentacar.js' %}"></script>
+    {% block passowrdCustomJS %}
 
+    {% endblock %}
 </html>
 
 
