--- a/accounting/templates/accounting/users.html
+++ b/accounting/templates/accounting/users.html
@@ -14,7 +14,7 @@
     <md-card>
         <div class="md-toolbar-tools">
             <img src="{% static 'images/plus.png' %}">
-            <a href="{% url 'sendInvite' %}"><md-button class="md-raised marginRight-3" >
+            <a href="{% url 'invitations:send-invite' %}"><md-button class="md-raised marginRight-3" >
                 Add Invitation
             </md-button></a>
                 <img src="{% static 'images/list.png' %}">
