--- a/templates/invitations/forms/invite_base.html
+++ b/templates/invitations/forms/invite_base.html
@@ -16,7 +16,8 @@
 
 </head>
 <body>
-
+<div id="wrap">
+    <div id="main">
 
      <!-- Navigation Start -->
          <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
@@ -73,14 +74,18 @@
         {% block inviteBase %}
 
         {% endblock %}
-    <!-- Footer Start -->
-     <hr ng-cloak>
-     <div class="container" ng-cloak>
+    </div>
+</div>
+   <!-- Footer Start -->
+    <footer class="c-footer">
+         <hr ng-cloak>
+         <div class="container" ng-cloak>
 
-          <footer>
-            <p>&copy; Company 2017</p>
-          </footer>
-     </div>
+
+                  <p>&copy; Company 2017</p>
+
+         </div>
+    </footer>
     <!-- Footer End -->
 
 
