F: invitation T: signup form validations

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
                       <span>Cars</span></a>
                 </li>
                 <li class="nav-item font-weight-bold">
-                  <a class="nav-link" href="#"><img src="{% static 'images/case.png' %}">
+                  <a class="nav-link" href="{% url 'accounting:caselist' %}"><img src="{% static 'images/case.png' %}">
                       <span>Case List</span></a>
                 </li>
                 <li class="nav-item font-weight-bold">
@@ -82,7 +82,7 @@
          <div class="container" ng-cloak>
 
 
-                  <p>&copy; Company 2017</p>
+                  <p>&copy; Allied Rent A Car 2017</p>
 
          </div>
     </footer>
