--- a/accounting/templates/accounting/users.html
+++ b/accounting/templates/accounting/users.html
@@ -24,7 +24,7 @@
 
         </div>
     </md-card>
-    <table class="table table-hover" >
+    <table class="table table-hover" ng-cloak>
               <thead>
                 <tr >
                   <th ng-click="sortBy('username')">USERNAME
