--- a/templates/signin.html
+++ b/templates/signin.html
@@ -40,7 +40,7 @@
             <div class="form-group form-group-default">
               <label>Login</label>
               <div class="controls">
-                <input type="text" name="username" placeholder="User Name" class="form-control" required>
+                <input type="text" name="username" placeholder="Email" class="form-control" required>
               </div>
             </div>
             <!-- END Form Control-->
