--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
                       <span>Users</span></a>
                 </li>
                 <li class="nav-item font-weight-bold">
-                  <a class="nav-link" href="#"><img src="{% static 'images/car.png' %}">
+                  <a class="nav-link" href="{% url 'accounting:cars' %}"><img src="{% static 'images/car.png' %}">
                       <span>Cars</span></a>
                 </li>
                 <li class="nav-item font-weight-bold">
