--- a/static/css/alliedrentacar.css
+++ b/static/css/alliedrentacar.css
@@ -191,3 +191,21 @@ form .password_input.focus {
 .form .register-form {
   display: none;
 }
+
+
+.fileUpload {
+    position: relative;
+    overflow: hidden;
+    margin: 10px;
+}
+.fileUpload input.upload {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 18px;
+    cursor: pointer;
+    opacity: 0;
+    filter: alpha(opacity=0);
+}
