--- a/templates/invitations/invite.html
+++ b/templates/invitations/invite.html
@@ -13,14 +13,15 @@
                 Users List
             </md-button></a>
                 <img src="{% static 'images/list.png' %}">
+           <a href="{% url 'invitation:inviteList' %}">
             <md-button class="md-raised " >
                Invitation List
-            </md-button>
+            </md-button></a>
 
         </div>
      </md-card>
 
-    <md-card class="container_password" ng-controller="inviteCtl" ng-cloak>
+    <md-card class="container_password"  ng-cloak>
 
       <form  method="post" action="{% url 'invitation:sendInvite'%}">
             {% csrf_token %}
@@ -65,6 +66,6 @@
 {% endblock %}
 
 {% block customJS %}
-<script src="{% static 'js/controller/invite.js' %}"></script>
+
 {% endblock %}
 
